Removed Logout Resource
